--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -65,6 +65,7 @@ table th,td {
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stats <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="@Url.Action("ExtAccount", "Stats")">By ExternalAccount</a></li>
+                    <li><a href="@Url.Action("IndexGauge", "ExtAccounts")">Stats Gauge</a></li>
                 </ul>
             </li>
             <li class="dropdown">
