--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/MaintenanceDetail.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/MaintenanceDetail.cshtml
@@ -7,6 +7,10 @@
     string latestStrategyStat = Model.StatsGauge.Strategy.LatestDisp;
     string earliestCreativeStat = Model.StatsGauge.Creative.EarliestDisp;
     string latestCreativeStat = Model.StatsGauge.Creative.LatestDisp;
+    string earliestSiteStat = Model.StatsGauge.Site.EarliestDisp;
+    string latestSiteStat = Model.StatsGauge.Site.LatestDisp;
+    string earliestConvStat = Model.StatsGauge.Conv.EarliestDisp;
+    string latestConvStat = Model.StatsGauge.Conv.LatestDisp;
     string syncAllUrl = Url.Action("Sync", new { id = Model.ExtAccount.Id, start = latestDailyStat });
     string syncDailyUrl = Url.Action("Sync", new { id = Model.ExtAccount.Id, start = latestDailyStat, level = "account" });
     string syncStratUrl = Url.Action("Sync", new { id = Model.ExtAccount.Id, start = latestStrategyStat, level = "strategy" });
@@ -45,4 +49,18 @@ Creative Stats...
 @if (Model.Syncable && Model.ExtAccount.Platform.Code == Platform.Code_AdRoll) {
     <text>&nbsp;&nbsp;</text>
     <a href="#" onclick="SyncAccount(@Model.ExtAccount.Id, '@syncCreatUrl'); return false">Sync</a>
+}
+<br />
+Site Stats...
+@if (earliestSiteStat != null) {
+    <text>Earliest: @earliestSiteStat - Latest: @latestSiteStat</text>
+} else {
+    <text>(none)</text>
+}
+<br />
+Conv Stats...
+@if (earliestConvStat != null) {
+    <text>Earliest: @earliestConvStat - Latest: @latestConvStat</text>
+} else {
+    <text>(none)</text>
 }
