--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Edit.cshtml
@@ -37,7 +37,7 @@
             <input type="submit" value="Save" />
             &nbsp;@Html.ActionLink("cancel", "Index")
             <br /><br />
-            @Html.ActionLink("Edit Column Mappings", "Edit", "PlatColMappings", new { id = Model.Id }, null)
+            @Html.ActionLink("Edit CSV Column Mappings", "Edit", "PlatColMappings", new { id = Model.Id }, null)
         </div>
     }
 </fieldset>
