--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatColMappings/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatColMappings/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DirectAgents.Domain.Entities.TD.PlatColMapping
 
 <fieldset>
-    <legend>Edit Column Mappings</legend>
+    <legend>Edit CSV Column Mappings</legend>
     @using (Html.BeginForm())
     {
         @Html.ValidationSummary()
@@ -11,7 +11,7 @@
             <br /><br />
             <table>
                 <tr>
-                    <td>@Html.LabelFor(m => m.Date, "*Date")</td>
+                    <td>@Html.LabelFor(m => m.Date)</td>
                     <td>@Html.EditorFor(m => m.Date)</td>
                 </tr>
                 <tr>
@@ -34,16 +34,42 @@
                     <td>@Html.LabelFor(m => m.PostViewConv)</td>
                     <td>@Html.EditorFor(m => m.PostViewConv)</td>
                 </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.StrategyName)</td>
+                    <td>@Html.EditorFor(m => m.StrategyName)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.StrategyEid)</td>
+                    <td>@Html.EditorFor(m => m.StrategyEid)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.TDadName, "CreativeName")</td>
+                    <td>@Html.EditorFor(m => m.TDadName)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.TDadEid, "CreativeEid")</td>
+                    <td>@Html.EditorFor(m => m.TDadEid)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.SiteName)</td>
+                    <td>@Html.EditorFor(m => m.SiteName)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.Month, "Month (date for site stats)")</td>
+                    <td>@Html.EditorFor(m => m.Month)</td>
+                </tr>
             </table>
-            *Required
-            <br /><br />
+            <br />
             <input type="submit" value="Save" />
             &nbsp;@Html.ActionLink("cancel", "Edit", "Platforms", new { id = Model.Id }, null)
             <br /><br />
             Fill in the names of the columns that a CSV file will have for the above fields.
             Leave blank to skip that field when uploading.
             <br /><br />
-            Note: Column names are case-sensitive.
+            Notes:<br />
+            - Column names are case-sensitive.<br />
+            - Usually leave StrategyEid and CreativeEid blank, to group by StrategyName / CreativeName.<br />
+            - (e.g. In YAM, two ads could have the same name but different ids; want to group by name)
         </div>
     }
 </fieldset>
